Task5/non-admin-api-allow.yaml
# ПОЛИТИКА 1: Запретить весь входящий трафик к API по умолчанию
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-default-deny-ingress
  namespace: network-policy-demo
spec:
  podSelector:
    matchExpressions:
      - {key: role, operator: In, values: [back-end-api, admin-back-end-api]}
  policyTypes:
  - Ingress
  ingress: [] # Пустой ingress означает "запретить все"
---
# ПОЛИТИКА 2: Разрешить трафик от front-end к back-end-api
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-non-admin-api-access
  namespace: network-policy-demo
spec:
  podSelector:
    matchLabels:
      role: back-end-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: front-end
    ports:
    - protocol: TCP
      port: 80
---
# ПОЛИТИКА 3: Разрешить трафик от admin-front-end к admin-back-end-api
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-api-access
  namespace: network-policy-demo
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: admin-front-end
    ports:
    - protocol: TCP
      port: 80
